# GenZ_Protest_Analysis

./: README.md  pyproject.toml
docs/: _config.yml  _toc.yml
notebooks/: demographic.ipynb  gallup_analysis.ipynb  protest_overview.ipynb  social-contract.ipynb  visuals.py
