[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "GenZ_Protest_Analysis"
description = "Analysis of Gen Z protest participation and activism in the MENAAP region"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["protest", "analysis", "genz", "activism"]
authors = [{ name = "Data Partnership", email = "datalab@worldbank.org" }]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.7"
dependencies = [
	"bokeh>=3,<4",
	"requests>=2.28.1",
	"pandas>=2",
	"pycountry>=22.3.5",
	"openpyxl",
	"matplotlib",
	"numpy",
]
[project.optional-dependencies]
docs = [
	"docutils==0.17.1",
	"jupyter-book>=1,<2",
]

[project.urls]
"Homepage" = "https://github.com/datapartnership/GenZ_Protest_Analysis"
"Bug Reports" = "https://github.com/datapartnership/GenZ_Protest_Analysis/issues"
"Source" = "https://github.com/datapartnership/GenZ_Protest_Analysis"

[tool.codespell]
skip = 'docs/_build,docs/bibliography.bib,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,Nd"

[tool.hatch.build.targets.wheel]
packages = ["src/template"]

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*",
    "docs/**/*",
    "notebooks/**/*",
    "data/**/*",
    "README.md",
    "LICENSE",
    "CITATION.cff"
]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
